# ansible-collection-huyz-general

./: .ansible-lint  .envrc  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.rst  LICENSE  Makefile  README.md  galaxy.yml  pyproject.toml
+Archived/: galaxy-publish.yml  galaxy-release.yml
.devcontainer/: devcontainer.json
.github/: paths-filter.yml
.github/workflow/: snyk-python.yml
.github/workflows/: ansible-molecule.yml  bandit.yml  dependency-review.yml  devskim.yml  lint.yml  publish.yml  release.yml  snyk-python.yml  sonarcloud.yml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 2023-02-25_add_to_config_file.yml  2023-02-25_v1.0.2_summary.yml  2023-03-09_prompt_password.yml  2023-03-09_sudo_by_ssh_agent.yml  2023-03-09_v1.0.3_summary.yml  2023-05-11_fix_ansiblelint_manifest.yml  2023-05-11_fix_makefile_test.yml  2023-05-11_prompt_password_minor.yml  2023-05-11_upgrade_ansible_version.yml  2023-05-12_fix_posix_dependency.yml  2023-05-12_v1.0.4_summary.yml  2024-08-04_prompt_password_support_windows.yml  2024-08-04_v1.1.0_summary.yml  2024-08-05_prompt_password_fix_non_windows.yml  2024-08-05_v1.1.1_summary.yml  2024-12-27_prompt_password_fix_winshell_exeecutable.yml  2024-12-27_v1.1.2_summary.yml  2025-06-13_refresh.yml  2025-06-13_v1.1.3_summary.yml  2025-09-23_prompt_password_fix_omit_placeholder.yml  2025-09-23_v1.1.4_summary.yml
meta/: runtime.yml
roles/add_to_config_file/: Makefile  README.md
roles/add_to_config_file/meta/: main.yml
roles/add_to_config_file/molecule/default/: converge.yml  molecule.yml  prepare.yml
roles/add_to_config_file/molecule/default/files/: common_pyenv_init.zsh  unmarked_block.sh
roles/add_to_config_file/molecule/default/tests/: test_blockinfile.py
roles/add_to_config_file/tasks/: main.yml
roles/prompt_password/: README.md
roles/prompt_password/tasks/: main.yml
roles/sudo_by_ssh_agent/: README.md
roles/sudo_by_ssh_agent/tasks/: main.yml
