[tool.poetry]
name = "huyz.general"
version = "1.0.1"
description = "Ansible collection of roles for general use"
authors = ["huyz"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.1"
ansible = "^9.6.0"
# For use of `manifest` in galaxy.xml
distlib = "^0.3.8"

[tool.poetry.group.dev.dependencies]
antsibull-changelog = "^0.29.0"
pre-commit = "^3.8.0"
# Avoid the dumb, irrelevant ansible-lint error
#   https://github.com/ansible/ansible-lint/discussions/2820
ansible-lint = { version = "^6.18.0", markers = "platform_system != 'Windows'" }
# molecule >= 5.0.1 to avoid ansible-compat issue with 4.x
#   https://github.com/ansible-community/molecule/issues/3903
molecule = { version = "^24.7.0" }
molecule-plugins = { extras = ["docker"], version = "^23.5.3" }
pytest-testinfra = "^10.1.1"
pytest-subtests = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
